@@ -19,6 +19,9 @@ bug fixes (and other actions) for each version of hwloc since version
 
 Version 2.7.1
 -------------
+* Workaround crashes when virtual machines report incoherent x86 CPUID
+  information about numbers of cores and threads.
+  Thanks to Peter Bense for the report.
 * Use setenv() instead of putenv() when trying to force enable oneAPI L0
   support, to avoid issues with applications that touch the environment,
   thanks to Josh Hursey for the patch.
